tests/e2e/topologies/grid-glb-demo/resources/operator-swim-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: operator-swim-lb
  namespace: grid-system
  labels:
    app.kubernetes.io/name: grid-operator
    app.kubernetes.io/part-of: grid-glb-demo
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: grid-operator
  ports:
    - name: swim-udp
      port: 7946
      targetPort: 7946
      protocol: UDP
